--- a/synthetic_dataset.ipynb
+++ b/synthetic_dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "synthetic dataset.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNY07Sj+mBhunG/kiAwUXVb",
+      "authorship_tag": "ABX9TyN0eX9fUSmNS8FAQyWK93kt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "hdXrvI4ZP6UA"
       },
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "3baWM9-wQGNm"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "vonwNUT1QJ8r"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "lKpIV4tSQODz"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "Demfh3fIQgg0"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "v5NusCzXQmk4"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "waKOkgmjQp9J"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -136,9 +136,9 @@
           "height": 479
         },
         "id": "GqNyQw2DQzUN",
-        "outputId": "e32c458e-d0d6-4bc6-bb11-3cf111696a1e"
+        "outputId": "8485f68f-0854-4ca4-8af0-6f4fe6fbf0fb"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -189,7 +189,7 @@
           "height": 479
         },
         "id": "pXycPjqjQ2yg",
-        "outputId": "5019423d-94de-43f4-a74a-4dee0c3846b9"
+        "outputId": "a7182590-c6d7-4671-fabc-46181b009e87"
       },
       "execution_count": 10,
       "outputs": [
@@ -239,7 +239,7 @@
           "height": 339
         },
         "id": "w9aJUGkNRCbK",
-        "outputId": "18afdeec-b6cf-4001-e5f5-5b0a85c21892"
+        "outputId": "210d0b8d-b9b5-4a76-d90a-c36176b153fb"
       },
       "execution_count": 11,
       "outputs": [
@@ -291,7 +291,7 @@
           "height": 356
         },
         "id": "5V54lBhARbi4",
-        "outputId": "73e037e5-9547-4bde-c7be-15ac873e72e7"
+        "outputId": "0c729567-36ba-4d84-d8a5-56278d351879"
       },
       "execution_count": 12,
       "outputs": [
@@ -342,7 +342,7 @@
           "height": 356
         },
         "id": "7eTZz8UJRznE",
-        "outputId": "8752937c-fc47-438a-a77d-4d75cbb486e5"
+        "outputId": "48a2cbc1-cade-4fd7-8cf1-950414aa9008"
       },
       "execution_count": 13,
       "outputs": [
@@ -391,7 +391,7 @@
           "height": 356
         },
         "id": "6gOCySBKR9T_",
-        "outputId": "428ee7fd-478f-40fa-9a3e-969cdb2cb793"
+        "outputId": "aaa7edd5-279a-4ffc-a375-a4f7b08a5e79"
       },
       "execution_count": 14,
       "outputs": [
@@ -437,7 +437,7 @@
           "height": 356
         },
         "id": "aAdhgNF2tF9s",
-        "outputId": "4bea9db2-97d2-4956-db93-0740b494e7e7"
+        "outputId": "fe879dca-c4a8-4b4c-83f9-5f0cbb71d097"
       },
       "execution_count": 15,
       "outputs": [
@@ -462,22 +462,10 @@
         "X= faces.data"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "guRXkKxxthpv",
-        "outputId": "276797a5-ee8e-418e-8b77-016afa771d21"
+        "id": "guRXkKxxthpv"
       },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "downloading Olivetti faces from https://ndownloader.figshare.com/files/5976027 to /root/scikit_learn_data\n"
-          ]
-        }
-      ]
+      "execution_count": 17,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -490,7 +478,7 @@
       "metadata": {
         "id": "UqYl_ES5tnP8"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -501,7 +489,7 @@
       "metadata": {
         "id": "kJKz2jFftywc"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -522,9 +510,9 @@
           "height": 349
         },
         "id": "VjhhmgqCt-rU",
-        "outputId": "39b1471c-425a-4345-cb98-4fa9b881a133"
+        "outputId": "3b41a1b5-6f38-4e50-ba0c-e6308c6f5beb"
       },
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -550,19 +538,154 @@
       "metadata": {
         "id": "v2ZJucTjuFl7"
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from sklearn.datasets import make_blobs\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.model_selection import train_test_split"
       ],
       "metadata": {
         "id": "3stm1fF4w3uq"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X, y = make_blobs(random_state=0)\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)\n",
+        "\n",
+        "logreg = LogisticRegression().fit(X_train, y_train)\n",
+        "\n",
+        "print(\"Test set score: {:.2f}\".format(logreg.score(X_test, y_test)))"
+      ],
+      "metadata": {
+        "id": "nOOK13-gw9KX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "58860d31-37f8-48bc-c3ff-23997cd74adc"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test set score: 0.88\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "iris = load_iris()\n",
+        "logreg = LogisticRegression(max_iter=400)\n",
+        "\n",
+        "scores = cross_val_score(logreg, iris.data, iris.target, cv=5)\n",
+        "for score in scores:\n",
+        "    print(score)\n",
+        "print(\"Average cross-validation score: {:.2f}\".format(scores.mean()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6896lStlfxvD",
+        "outputId": "992269a3-40e2-447c-b851-4dc13c55b3e1"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9666666666666667\n",
+            "1.0\n",
+            "0.9333333333333333\n",
+            "0.9666666666666667\n",
+            "1.0\n",
+            "Average cross-validation score: 0.97\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import StratifiedKFold\n",
+        "skf = StratifiedKFold(n_splits=5)\n",
+        "scores_strat = cross_val_score(logreg, iris.data, iris.target, cv=skf)\n",
+        "for score in scores_strat:\n",
+        "    print(score)\n",
+        "print(\"Average cross-validation score: {:.2f}\".format(scores_strat.mean()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L1bkWPdQgKdk",
+        "outputId": "da9c80ff-cb24-4c5e-abb9-adad966080a3"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9666666666666667\n",
+            "1.0\n",
+            "0.9333333333333333\n",
+            "0.9666666666666667\n",
+            "1.0\n",
+            "Average cross-validation score: 0.97\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import KFold\n",
+        "kfold = KFold(n_splits=5)\n",
+        "scores_standard = cross_val_score(logreg, iris.data, iris.target, cv=kfold)\n",
+        "for score in scores_standard:\n",
+        "    print(score)\n",
+        "print(\"Average cross-validation score: {:.2f}\".format(scores_standard.mean()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XlZErG5Cgiiy",
+        "outputId": "cfc5b402-8c51-4ce5-8668-bfe51751a7fc"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0\n",
+            "1.0\n",
+            "0.8666666666666667\n",
+            "0.9333333333333333\n",
+            "0.8333333333333334\n",
+            "Average cross-validation score: 0.93\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -570,7 +693,7 @@
         ""
       ],
       "metadata": {
-        "id": "nOOK13-gw9KX"
+        "id": "Ywu52voGgxzI"
       },
       "execution_count": null,
       "outputs": []
